# mbedtls-demo

./: .gitignore  BOSS_SUMMARY.md  CMakeLists.txt  GITHUB_ACTIONS_SETUP.md  README.md  TECHNICAL_EXPLANATION.md  demo.sh  setup.sh
.github/workflows/: README.md  tsa-verification-test.yml
include/: tsa_verifier.h
scripts/: generate_tsr.sh
src/: tsa_verifier.cpp
test/: test_tsa.cpp
